@@ -672,7 +672,8 @@ worker_init(struct worker* worker, struct config_file *cfg,
 		cfg->outgoing_num_ports * worker->thread_num;
 	worker->back = outside_network_create(worker->base,
 		buffer_size, (size_t)cfg->outgoing_num_ports, cfg->ifs, 
-		cfg->num_ifs, cfg->do_ip4, cfg->do_ip6, startport);
+		cfg->num_ifs, cfg->do_ip4, cfg->do_ip6, startport, 
+		cfg->do_tcp?cfg->outgoing_num_tcp:0);
 	if(!worker->back) {
 		log_err("could not create outgoing sockets");
 		worker_delete(worker);
