@@ -39,6 +39,9 @@ server:
 	# But also takes more system resources (for open sockets).
 	# outgoing-range: 16
 
+	# number of outgoing simultaneous tcp buffers to hold per thread.
+	# outgoing-num-tcp: 10
+
 	# the amount of memory to use for the message cache.
 	# in bytes. default is 4 Mb
 	# msg-cache-size: 4194304
